--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a href="/events.html">events</a></li><li>
                 <a href="/officers.html">people</a></li><li >
                 <a href="/mentorship.html">mentorship</a></li><li>
-                <a href="/contact.html">thai classes</a></li><li>
+                <a href="/thaiclasses.html">thai classes</a></li><li>
                 <a href="/contact.html">contact</a></li>
             </ul>
         </div>
