--- a/mentorship.html
+++ b/mentorship.html
@@ -22,11 +22,11 @@
         <div class="menu-bar span8">
             <ul>
                 <!-- Must be the following format to be spaceless -->
-                <li><a href="/index.html">home</a></li><li>
+                <a href="/index.html">home</a></li><li>
                 <a href="/about.html">about</a></li><li>
                 <a href="/events.html">events</a></li><li>
-                <a href="/officers.html">people</a></li><li class="selected">
-                <a href="/mentorship.html">mentorship</a></li><li>
+                <a href="/officers.html">people</a></li>
+                <li class="selected"><a href="/mentorship.html">mentorship</a></li><li>
                 <a href="/dept.html">thai classes</a></li><li>
                 <a href="/contact.html">contact</a></li>
             </ul>
