--- a/officers.html
+++ b/officers.html
@@ -30,7 +30,7 @@
                 <li><a href="/index.html">Home</a></li><li>
                 <a href="/about.html">About</a></li><li>
                 <a href="/events.html">Events</a></li><li class="selected">
-                <a href="/officers.html">People</a></li><li>
+                <a href="/officers.html">Officers</a></li><li>
                 <a href="/mentorship.html">Mentorship</a></li><li>
                 <a href="/thaiclasses.html">Thai Classes</a></li><li>
                 <a href="/contact.html">Contact</a></li>
@@ -99,7 +99,7 @@
             </div>
         </div> <!-- officer -->
         <div class="span4 officer">
-            <div style="background-image: url('images/event2.jpg');" class="officer-picture"></div>
+            <div style="background-image: url('https://sphotos-b-sjc.xx.fbcdn.net/hphotos-prn2/1185527_10151867996980011_1672978165_n.jpg');" class="officer-picture"></div>
             <div class="officer-content">
                 <div class="text officer-name">Chanoknan Vorasucha</div>
                 <div class="text officer-position">Treasurer</div>
@@ -108,7 +108,7 @@
             </div>
         </div> <!-- officer -->
         <div class="span4 officer">
-            <div style="background-image: url('images/event2.jpg');" class="officer-picture"></div>
+            <div style="background-image: url('https://sphotos-a-sjc.xx.fbcdn.net/hphotos-ash3/1150271_10151867988765011_358964291_n.jpg');" class="officer-picture"></div>
             <div class="officer-content">
                 <div class="text officer-name">Panthita Punyaneramitdee</div>
                 <div class="text officer-position">Outreach Director</div>
@@ -119,7 +119,7 @@
     </div> <!-- officers-row -->
     <div class="row officers-row">
         <div class="span4 officer">
-            <div style="background-image: url('images/event2.jpg');" class="officer-picture"></div>
+            <div style="background-image: url('https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-prn2/1186095_10151868001130011_732869568_n.jpg');" class="officer-picture"></div>
             <div class="officer-content">
                 <div class="text officer-name">Rasarose Kitmungsa</div>
                 <div class="text officer-position">Marketing Director</div>
@@ -128,7 +128,7 @@
             </div>
         </div> <!-- officer -->
         <div class="span4 officer">
-            <div style="background-image: url('images/event2.jpg');" class="officer-picture"></div>
+            <div style="background-image: url('https://sphotos-b-sjc.xx.fbcdn.net/hphotos-ash4/1005820_10151867990475011_833966605_n.jpg');" class="officer-picture"></div>
             <div class="officer-content">
                 <div class="text officer-name">Nichakarn Yordduangjun</div>
                 <div class="text officer-position">Activities Coordinator</div>
