--- a/officers.html
+++ b/officers.html
@@ -141,7 +141,7 @@
             <div class="officer-content">
                 <div class="text officer-name">Kavin Phongpandecha</div>
                 <div class="text officer-position">Webmaster</div>
-                <div class="text officer-subtitle">EECS, Economics, and Statistics 2014</div>
+                <div class="text officer-subtitle">EECS 2014</div>
                 <div class="text officer-description">Hi, my name is Art, and I will be serving as your Chief Technology Officer for the upcoming academic year. I enjoy meeting new people and making new friends, so feel free to talk to me about whatever! My goal this semester for ThaiSA is to maintain the website and keep everyone updated with news and events. I love technology and I am looking for new ways to improve communication and interaction between the officers and the Thai community here at Berkeley. I am excited to work with everyone and am looking forward to a great semester!</div>
             </div>
         </div> <!-- officer -->
