--- a/contact.html
+++ b/contact.html
@@ -22,13 +22,13 @@
         <div class="menu-bar span8">
             <ul>
                 <!-- Must be the following format to be spaceless -->
-                <li><a href="/index.html">home</a></li><li>
-                <a href="/about.html">about</a></li><li>
-                <a href="/events.html">events</a></li><li>
-                <a href="/officers.html">people</a></li><li>
-                <a href="/mentorship.html">mentorship</a></li><li>
-                <a href="/dept.html">thai classes</a></li><li class="selected">
-                <a href="/contact.html">contact</a></li>
+                <li><a href="/index.html">Home</a></li><li>
+                <a href="/about.html">About</a></li><li>
+                <a href="/events.html">Events</a></li><li>
+                <a href="/officers.html">Officers</a></li><li>
+                <a href="/mentorship.html">Mentorship</a></li><li>
+                <a href="/thaiclasses.html">Thai Classes</a></li><li class="selected">
+                <a href="/contact.html">Contact</a></li>
             </ul>
         </div>
     </div>
