--- a/events.html
+++ b/events.html
@@ -27,7 +27,7 @@
         <div class="menu-bar span8">
             <ul>
                 <!-- Must be the following format to be spaceless -->
-                <li><a href="/index.html">Kuy</a></li><li>
+                <li><a href="/index.html">Home</a></li><li>
                 <a href="/about.html">About</a></li><li class="selected">
                 <a href="/events.html">Events</a></li><li>
                 <a href="/officers.html">Officers</a></li><li >
