added documentation, deleted unecessary files, resolved animation bug in officers page

--- a/officers.html
+++ b/officers.html
@@ -8,15 +8,18 @@
 
     <!-- styles -->
     <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <!-- twitter bootstrap (http://getbootstrap.com/2.3.2/) -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link href="css/pure.css" rel="stylesheet">
+    <!-- font awesome icon package (http://fortawesome.github.io/Font-Awesome/) -->
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+    <!-- google web fonts (http://www.google.com/fonts) -->
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="css/officers.css">
 
     <!-- js -->
-    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" src="js/jquery-ui.js"></script>
+    <script type="text/javascript" src="js/utils.js"></script>
     <script type="text/javascript" src="js/officers.js"></script>
 </head>
 <body>
