--- a/thaiclasses.html
+++ b/thaiclasses.html
@@ -8,12 +8,16 @@
 
     <!-- styles -->
     <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <!-- twitter bootstrap (http://getbootstrap.com/2.3.2/) -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <!-- font awesome icon package (http://fortawesome.github.io/Font-Awesome/) -->
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+    <!-- google web fonts (http://www.google.com/fonts) -->
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="css/text.css">
 </head>
 
+<!-- wrap and main used to force footer to bottom of page regardless of page height -->
 <div id="wrap">
 <div id="main">
 <!-- Main Menu -->
