--- a/events.html
+++ b/events.html
@@ -8,14 +8,18 @@
 
     <!-- styles -->
     <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <!-- twitter bootstrap (http://getbootstrap.com/2.3.2/) -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <!-- pure css (http://purecss.io/) -->
     <link href="css/pure.css" rel="stylesheet">
+    <!-- font awesome icon package (http://fortawesome.github.io/Font-Awesome/) -->
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+    <!-- google web fonts (http://www.google.com/fonts) -->
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="css/events.css">
 
     <!-- js -->
-    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" src="js/jquery-ui.js"></script>
     <script type="text/javascript" src="js/events.js"></script>
 </head>
@@ -192,7 +196,7 @@
                     </ul>
                 </div>
             </div>
-            
+
         </div>
         <div class="row-fluid footer-bottom-container">
             <div class="span12 footer-bottom">&copy; 2013 U.C. Berkeley Thailand Student Association (ThaiSA)</div>
