--- a/index.html
+++ b/index.html
@@ -5,16 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- forces mobile viewport to be correct -->
 
+
+
+    <!-- styles -->
     <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <!-- twitter bootstrap (http://getbootstrap.com/2.3.2/) -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/flexslider.css" type="text/css">
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-    <script type="text/javascript" src="js/jquery.flexslider-min.js"></script>
-
-    <script type="text/javascript" src="js/index.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <!-- google web fonts (http://www.google.com/fonts) -->
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css">
+    <!-- flexslider js library (http://www.woothemes.com/flexslider/)  -->
+    <link rel="stylesheet" href="css/flexslider.css" type="text/css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+
+    <!-- js -->
+    <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="js/jquery.flexslider-min.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+
     <title>ThaiSA Home</title>
 </head>
 <body>
@@ -130,7 +137,7 @@
             </div>
         </div>
         <div class="row-fluid footer-bottom-container">
-            <div class="span12 footer-bottom">&copy; 2013 U.C. Berkeley Thailand Student Association (ThaiSA) ** Designed By Yuxin Zhu</div>
+            <div class="span12 footer-bottom">&copy; 2013 U.C. Berkeley Thailand Student Association (ThaiSA)</div>
         </div>
     </div>
 </div>
