--- a/contact.html
+++ b/contact.html
@@ -112,19 +112,20 @@ onsubmit="submitted=true;"><ol style="padding-left: 0">
                 <div class="list-header">SITE MAP</div>
                 <div class="sitemap-container">
                     <ul>
-                        <li class="footer-link"><a href="/about.html">home</a></li>
-                        <li class="footer-link"><a href="/about.html">about</a></li>
-                        <li class="footer-link"><a href="/about.html">events</a></li>
-                        <li class="footer-link"><a href="/about.html">officers</a></li>
-                        <li class="footer-link"><a href="/about.html">mentorship</a></li>
-                        <li class="footer-link"><a href="/about.html">thai classes</a></li>
-                        <li class="footer-link"><a href="/about.html">contact</a></li>
+                        <li class="footer-link"><a href="/index.html">Home</a></li>
+                        <li class="footer-link"><a href="/about.html">About</a></li>
+                        <li class="footer-link"><a href="/events.html">Events</a></li>
+                        <li class="footer-link"><a href="/officers.html">Officers</a></li>
+                        <li class="footer-link"><a href="/mentorship.html">Mentorship</a></li>
+                        <li class="footer-link"><a href="/thaiclasses.html">Thai Classes</a></li>
+                        <li class="footer-link"><a href="/contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
         </div>
         <div class="row-fluid footer-bottom-container">
-            <div class="span12 footer-bottom">&copy; 2013 U.C. Berkeley Thailand Student Association (ThaiSA)</div>
+            <div class="span12 footer-bottom">&copy; 2013 UC Berkeley Thai Student Association (ThaiSA)</div>
+            <div class="span12 footer-bottom">Designed by Yuxin Zhu</div>
         </div>
     </div>
 </div>
