--- a/events.html
+++ b/events.html
@@ -189,7 +189,7 @@
                 <div class="sitemap-container">
                     <ul>
                         <li class="footer-link"><a href="/index.html">Home</a></li>
-                        <li class="footer-link"><a href="/about.html">about</a></li>
+                        <li class="footer-link"><a href="/about.html">About</a></li>
                         <li class="footer-link"><a href="/events.html">Events</a></li>
                         <li class="footer-link"><a href="/officers.html">Officers</a></li>
                         <li class="footer-link"><a href="/Mentorship.html">Mentorship</a></li>
