--- a/contact.html
+++ b/contact.html
@@ -83,8 +83,8 @@ onsubmit="submitted=true;"><ol style="padding-left: 0">
                 <div class="list-header">SUPPORT</div>
                 <div class="social-container">
                     <ul>
-                        <li><a href="http://www.facebook.com/yzhu25"><div class='icons facebook'></div></a></li>
-                        <li><a href="mailto:yuxinzhu@berkeley.edu"><div class='icons email'></div></a></li>
+                        <li><a href="https://www.facebook.com/groups/2229957747/"><div class='icons facebook'></div></a></li>
+                        <li><a href="mailto:thaisa.ucberkeley@gmail.com"><div class='icons email'></div></a></li>
                     </ul>
                 </div>
             </div>
@@ -101,9 +101,9 @@ onsubmit="submitted=true;"><ol style="padding-left: 0">
                 <div class="list-header">GET IN TOUCH</div>
                 <div class="contact-container">
                     <ul>
-                        <li class="footer-link"><a href="mailto:yuxinzhu@berkeley.edu">President</a></li>
-                        <li class="footer-link"><a href="mailto:yuxinzhu@berkeley.edu">Secretary</a></li>
-                        <li class="footer-link"><a href="mailto:yuxinzhu@berkeley.edu">Webmaster</a></li>
+                        <li class="footer-link"><a href="mailto:natchapol.p@berkeley.edu">President</a></li>
+                        <li class="footer-link"><a href="mailto:numfah_23@berkeley.edu">Secretary</a></li>
+                        <li class="footer-link"><a href="mailto:k.phongpandecha@gmail.com">Webmaster</a></li>
                     </ul>
                 </div>
             </div>
