--- a/mentorship.html
+++ b/mentorship.html
@@ -64,8 +64,8 @@
                 <div class="list-header">SUPPORT</div>
                 <div class="social-container">
                     <ul>
-                        <li><a href="http://www.facebook.com/yzhu25"><div class='icons facebook'></div></a></li>
-                        <li><a href="mailto:yuxinzhu@berkeley.edu"><div class='icons email'></div></a></li>
+                        <li><a href="https://www.facebook.com/groups/2229957747/"><div class='icons facebook'></div></a></li>
+                        <li><a href="mailto:thaisa.ucberkeley@gmail.com"><div class='icons email'></div></a></li>
                     </ul>
                 </div>
             </div>
@@ -82,9 +82,9 @@
                 <div class="list-header">GET IN TOUCH</div>
                 <div class="contact-container">
                     <ul>
-                        <li class="footer-link"><a href="mailto:yuxinzhu@berkeley.edu">President</a></li>
-                        <li class="footer-link"><a href="mailto:yuxinzhu@berkeley.edu">Secretary</a></li>
-                        <li class="footer-link"><a href="mailto:yuxinzhu@berkeley.edu">Webmaster</a></li>
+                        <li class="footer-link"><a href="mailto:natchapol.p@berkeley.edu">President</a></li>
+                        <li class="footer-link"><a href="mailto:numfah_23@berkeley.edu">Secretary</a></li>
+                        <li class="footer-link"><a href="mailto:k.phongpandecha@gmail.com">Webmaster</a></li>
                     </ul>
                 </div>
             </div>
@@ -105,7 +105,7 @@
             </div>
         </div>
         <div class="row-fluid footer-bottom-container">
-            <div class="span12 footer-bottom">&copy; 2013 UC Berkeley Thailand Student Association (ThaiSA)</div>
+            <div class="span12 footer-bottom">&copy; 2013 UC Berkeley Thai Student Association (ThaiSA)</div>
             <div class="span12 footer-bottom">Designed by Yuxin Zhu</div>
         </div>
     </div>
