--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <div class="list-header">SUPPORT</div>
                 <div class="social-container">
                     <ul>
-                        <li><a href="https://www.facebook.com/groups/2229957747/"><div class='icons facebook'></div></a></li>
+                        <li><a href="https://www.facebook.com/UCBThaiSA"><div class='icons facebook'></div></a></li>
                         <li><a href="mailto:thaisa.ucberkeley@gmail.com"><div class='icons email'></div></a></li>
                     </ul>
                 </div>
