--- a/about.html
+++ b/about.html
@@ -63,7 +63,15 @@
 
     <div class="row history-container">
         <div class="span12">
-            <div class="text-content">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</div>
+            <div class="text-content">As a cultural and professional club, our purposes and goals are:
+To unite and act as an active resource for people who are interested in Thailand as well as Thai culture and affairs.
+To encourage closer ties and greater exchanges between the campus community and Thailand.
+To provide forums of free discussion and promote greater understanding about the cultural, political, and social affairs of Thailand among the campus and local communities.
+To maintain an active professional network between current members and UC Berkeley alumni in Thailand.
+To establish positive connections between ThaiSA and other cultural/professional organizations in the Berkeley campus.
+To establish cooperative relationships with other Thai organizations across the United States, notably by maintaining intercollegiate ties with other Thai student organizations.
+To participate in community service and/or fundraising that will help communities around the Bay Area and in Thailand.
+To act as a support network for students from Thailand in their transition from Thailand to Berkeley and the United States.</div>
         </div>
     </div>
 </div>
@@ -85,8 +93,9 @@
             <div class="span2 footer-column">
                 <div class="list-header">MEET US</div>
                 <div class="tabling-container">
-                    <div>Sproul Hall</div>
-                    <div>11-2PM Monday-Thursday</div>
+                    <div>Little Bangkok</div>
+                    <div>2338 Bancroft Way</div>
+                    <div>11-5PM Monday-Friday</div>
                 </div>
             </div>
 
@@ -118,7 +127,6 @@
         </div>
         <div class="row-fluid footer-bottom-container">
             <div class="span12 footer-bottom">&copy; 2013 UC Berkeley Thai Student Association (ThaiSA)</div>
-            <div class="span12 footer-bottom">Designed by Yuxin Zhu</div>
         </div>
     </div>
 </div>
