--- a/index.html
+++ b/index.html
@@ -105,8 +105,9 @@
             <div class="span2 footer-column">
                 <div class="list-header">MEET US</div>
                 <div class="tabling-container">
-                    <div>Sproul Hall</div>
-                    <div>11-2PM Monday-Thursday</div>
+                    <div>Little Bangkok</div>
+                    <div>2338 Bancroft Way</div>
+                    <div>11-5PM Monday-Friday</div>
                 </div>
             </div>
 
@@ -138,7 +139,6 @@
         </div>
         <div class="row-fluid footer-bottom-container">
             <div class="span12 footer-bottom">&copy; 2013 UC Berkeley Thai Student Association (ThaiSA)</div>
-            <div class="span12 footer-bottom">Designed by Yuxin Zhu</div>
         </div>
     </div>
 </div>
