--- a/contact.html
+++ b/contact.html
@@ -92,8 +92,9 @@ onsubmit="submitted=true;"><ol style="padding-left: 0">
             <div class="span2 footer-column">
                 <div class="list-header">MEET US</div>
                 <div class="tabling-container">
-                    <div>Sproul Hall</div>
-                    <div>11-2PM Monday-Thursday</div>
+                    <div>Little Bangkok</div>
+                    <div>2338 Bancroft Way</div>
+                    <div>11-5PM Monday-Friday</div>
                 </div>
             </div>
 
@@ -125,7 +126,6 @@ onsubmit="submitted=true;"><ol style="padding-left: 0">
         </div>
         <div class="row-fluid footer-bottom-container">
             <div class="span12 footer-bottom">&copy; 2013 UC Berkeley Thai Student Association (ThaiSA)</div>
-            <div class="span12 footer-bottom">Designed by Yuxin Zhu</div>
         </div>
     </div>
 </div>
