--- a/about.html
+++ b/about.html
@@ -63,15 +63,7 @@
 
     <div class="row history-container">
         <div class="span12">
-            <div class="text-content">As a cultural and professional club, our purposes and goals are:
-To unite and act as an active resource for people who are interested in Thailand as well as Thai culture and affairs.
-To encourage closer ties and greater exchanges between the campus community and Thailand.
-To provide forums of free discussion and promote greater understanding about the cultural, political, and social affairs of Thailand among the campus and local communities.
-To maintain an active professional network between current members and UC Berkeley alumni in Thailand.
-To establish positive connections between ThaiSA and other cultural/professional organizations in the Berkeley campus.
-To establish cooperative relationships with other Thai organizations across the United States, notably by maintaining intercollegiate ties with other Thai student organizations.
-To participate in community service and/or fundraising that will help communities around the Bay Area and in Thailand.
-To act as a support network for students from Thailand in their transition from Thailand to Berkeley and the United States.</div>
+            <div class="text-content">As a cultural and professional club, our purposes and goals are: (1) To unite and act as an active resource for people who are interested in Thailand as well as Thai culture and affairs. (2) To encourage closer ties and greater exchanges between the campus community and Thailand. (3) To provide forums of free discussion and promote greater understanding about the cultural, political, and social affairs of Thailand among the campus and local communities. (4) To maintain an active professional network between current members and UC Berkeley alumni in Thailand. (5) To establish positive connections between ThaiSA and other cultural/professional organizations in the Berkeley campus. (6) To establish cooperative relationships with other Thai organizations across the United States, notably by maintaining intercollegiate ties with other Thai student organizations. (7) To participate in community service and/or fundraising that will help communities around the Bay Area and in Thailand. (8) To act as a support network for students from Thailand in their transition from Thailand to Berkeley and the United States.</div>
         </div>
     </div>
 </div>
