--- a/thaiclasses.html
+++ b/thaiclasses.html
@@ -47,7 +47,30 @@
         <div class="span6 offset1 mentorship-header">Thai Classes</div>
     </div>
     <div class="row">
-        <div class="span10 offset1 mentorship-text">The Peer Mentorship Program is an initiative that began in the 2013-2014 school year. This program, reminiscent of Thailand’s famous and longstanding Sai Rahud (สายรหัส) program, serves the purpose of trying to ease the transition into USA, Berkeley and college life for new Thai students by matching incoming Thai UC Berkeley students (Mentees) with current Thai UC Berkeley students (Mentors). Mentors and mentees apply to this program voluntarily and are matched based on different factors, including but not limited to their academic interests and extracurricular interests. Each mentor is usually assigned to one mentee as we try to maintain the 1:1 mentor-mentee ratio in our program. Mentors are required to hold regular events for their mentees that will help the mentees acclimatize themselves to life in USA and Berkeley. Group events that bring together all the mentors and mentees for bonding activities are also regularly held. The program hopes that mentors and mentees will continue to foster lifelong friendships well beyond the program and that the program is a rewarding experience for both the mentors and mentees.</div>
+        <div class="span10 offset1 mentorship-text">Thai 1A  Introduction to Thai language and Culture
+Course Description
+This course is designed for students who have little or no knowledge of Thai language, either spoken or written.  The focus of Introductory Thai 1A is on building vocabulary and  developing  ability to speak with correct pronunciation through  basic conversation in day-to-day settings.   Students will be introduced to Thai alphabets and syllable construction rules.  To prepare students  for intensive literacy acquisition in the spring semester, students  are expected to read and write simple words and short sentences  by the end of the semester.    The class will study  common facts about Thailand, etiquette, customs, and values  in contemporary Thai culture, through discussion, proverbs, and participation in cultural activities..  
+Prerequisite: None. 
+
+
+Thai 1 B Introduction to Thai Language and Culture
+Course Description
+Thai 1 B is an upper introductory level course.   Continuing  from the fundamental  knowledge of syllable construction learned in Thai 1A , the course will  rapidly elevating student's  literacy ability,  aiming  to completely abandon transcription before mid-semester.    By the end of the semester, students will be reading and writing short descriptive and creative essay, equivalent to 2nd grade students  in Thai school.  Students continued to learn  new vocabulary , grammar and practical theme based  conversation with opportunity to practice with native speakers.  Students will also be introduced to Thai customs, culture and value, through a variety of media and cultural activities.  Beginning to use Thai as language of instruction up to 20% of the time. 
+Prerequisite: Thai 1A, (Beginning Introductory Thai) or equivalent , by consent of instructor. Ability to speak  some Thai  and carry basic conversation about oneself , family , personal  description,food,and numbers.   Knowledge of  the alphabet , and ability to read and write simple words at rudimentary level
+.
+
+Thai 100A   Intermediate Thai Language and Culture 
+Course Description
+Intermediate Thai 100A continues to integrate cultural awareness into language education. In this semester, the emphasis shifts from the concrete to the abstract. Students will begin to read and write compound  sentences, formal essays, and letters. For immersion, opportunity to practice speaking with native speakers  are provided regularly.  Students will also watch Thai films  throughout the semester.  Using Thai as language of instruction will gradually increase from 20% up to 50%  towards the end of the semester. By the end of the semester, students should achieve  literacy level equivalent to 4th grade in Thai school. 
+Prerequisite:  Thai 1B (Upper Introductory Thai) or equivalent, by consent of instructor.   At least medium fluency in spoken and written Thai.  Ability to conduct small talk with sufficient fluency.  Ability to read and write  equivalent to  2nd grade level in Thai school.  
+
+
+
+Thai 100B  Intermediate Thai Language and Culture
+Course Description
+ Intermediate Thai 100B is an upper intermediate level course, a continuation of Intermediate Thai 100A.  Students will learn to read longer and more abstract writing, advertisements from newspapers, articles from magazines and webpage.  The class will cover expressions, figures of speech, higher level grammar, and hierarchical pronouns. Writing will move from descriptive to expository.  To increase verbal skills and cultural education, students will watch karaoke, TV advertisements, and films.  Students will also have regular intensive conversation practice and in-class presentation.  The language of instruction will be in Thai approximately 50% to 70% of the time. By the end of the semester, the average students should achieve literacy level equivalent to 5th - 6th grade in Thai school. 
+Prerequisite:  Thai 100B (Lower Intermediate Thai) or equivalent, by consent of instructor.   Ability to read descriptive articles, and write short composition equivalent to  3rd - 4th  grade students in Thai school.   Capable of carrying  informal conversation on a general subject with medium fluency.   
+</div>
 
         <div class="span10 offset1 contact-text"><i class="icon-dollar"></i>Donate <span class="bold">to the Thai Language Department</span> at <a href="mailto:numfah_23berkeley.edu">www.berkeley.edu</a>.</div>
     </div>
