--- a/thaiclasses.html
+++ b/thaiclasses.html
@@ -55,9 +55,7 @@
         <div class="span10 offset1 contact-text"> </div>
         <div class="span10 offset1 mentorship-text">Thai 100B - Intermediate Thai Language and Culture.</span> Intermediate Thai 100B is an upper intermediate level course, a continuation of Intermediate Thai 100A.  Students will learn to read longer and more abstract writing, advertisements from newspapers, articles from magazines and webpage. The class will cover expressions, figures of speech, higher level grammar, and hierarchical pronouns. Writing will move from descriptive to expository. To increase verbal skills and cultural education, students will watch karaoke, TV advertisements, and films. Students will also have regular intensive conversation practice and in-class presentation. The language of instruction will be in Thai approximately 50% to 70% of the time. By the end of the semester, the average students should achieve literacy level equivalent to 5th - 6th grade in Thai school. Prerequisite: Thai 100B (Lower Intermediate Thai) or equivalent, by consent of instructor. Ability to read descriptive articles, and write short composition equivalent to 3rd - 4th grade students in Thai school. Capable of carrying  informal conversation on a general subject with medium fluency.</div>
 
-        <div class="span10 offset1 contact-text"> </div>
-
-        <div class="span10 offset1 contact-text"><i class="icon-dollar"></i>Donate <span class="bold">to the Thai Language Department</span> at <a href="mailto:numfah_23berkeley.edu">www.berkeley.edu</a>.</div>
+        <div class="span10 offset1 contact-text"><i class="icon-dollar"></i>Donate <span class="bold">to the Thai Language Department</span> at the <a href="http://givetocal.berkeley.edu/fund/?f=FU1121000">Thai Language Fund</a>.</div>
     </div>
 </div>
 </div>
