--- a/thaiprofessor.html
+++ b/thaiprofessor.html
@@ -39,22 +39,30 @@
 </div>
 
 
-<div class="background-header-container"><div class="background-header">Classes</div></div>
+<div class="background-header-container"><div class="background-header">Thai Professor</div></div>
 
 
 <div class="container">
     <div class="row header-container">
-        <div class="span6 offset1 mentorship-header">Thai Classes</div>
+        <div class="span6 offset1 mentorship-header">Supatra Chowchuvech</div>
     </div>
     <div class="row">
-        <div class="span10 offset1 mentorship-text">Thai 1A - Introduction to Thai language and Culture. This course is designed for students who have little or no knowledge of Thai language, either spoken or written. The focus of Introductory Thai 1A is on building vocabulary and developing ability to speak with correct pronunciation through basic conversation in day-to-day settings. Students will be introduced to Thai alphabets and syllable construction rules. To prepare students for intensive literacy acquisition in the spring semester, students are expected to read and write simple words and short sentences by the end of the semester. The class will study common facts about Thailand, etiquette, customs, and values in contemporary Thai culture, through discussion, proverbs, and participation in cultural activities. Prerequisite: None. </div>
+        <div class="span10 offset1 mentorship-text">
+        Supatra Chowchuvech
+        M.A. Institute of Transpersonal Psychology (Counseling Psychology), 2009
+        M.A. University of Pennsylvania  (Cultural Anthropology), 1983
+        B. Arch Chulalongkorn University  (Architecture), 1976
+        Lecturer</div>
         <div class="span10 offset1 contact-text"> </div>
-        <div class="span10 offset1 mentorship-text">Thai 1B - Introduction to Thai Language and Culture. Thai 1B is an upper introductory level course. Continuing from the fundamental knowledge of syllable construction learned in Thai 1A, the course will rapidly elevating student's literacy ability, aiming to completely abandon transcription before mid-semester. By the end of the semester, students will be reading and writing short descriptive and creative essay, equivalent to 2nd grade students in Thai school. Students continued to learn  new vocabulary, grammar and practical theme based conversation with opportunity to practice with native speakers. Students will also be introduced to Thai customs, culture and value, through a variety of media and cultural activities. Beginning to use Thai as language of instruction up to 20% of the time. Prerequisite: Thai 1A, (Beginning Introductory Thai) or equivalent, by consent of instructor. Ability to speak some Thai and carry basic conversation about oneself, family, personal description, food, and numbers. Knowledge of the alphabet, and ability to read and write simple words at rudimentary level.</div>
+        <div class="span10 offset1 mentorship-text"> 
+        Supatra Chowchuvech teaches Thai Language and Culture at the Department of South and Southeast Asian Studies since 2009. After retiring from practice as a licensed architect in the San Francisco Bay Area, she has taught Thai Language and Culture at the Southeast Asian Summer Studies Institute (SEASSI), University of Wisconsin, and at the Buddhanusorn Thai temple in Fremont. Under the pen-name  Vitida Vasant , she co-authored a bi-lingual cross-cultural self-help relationship book , "Thailand Fever",  which has been translated into two other European languages, Ms. Chowchuvech is particularly interested in the issue of cross-cultural dynamic. She regularly conducts workshops and counseling to Thai and other Asian immigrants on navigating cultural differences on child rearing and spousal conflict. She is also an interpreter for immigration court.</div>
         <div class="span10 offset1 contact-text"> </div>
-        <div class="span10 offset1 mentorship-text">Thai 100A - Intermediate Thai Language and Culture. Intermediate Thai 100A continues to integrate cultural awareness into language education. In this semester, the emphasis shifts from the concrete to the abstract. Students will begin to read and write compound  sentences, formal essays, and letters. For immersion, opportunity to practice speaking with native speakers  are provided regularly. Students will also watch Thai films throughout the semester. Using Thai as language of instruction will gradually increase from 20% up to 50% towards the end of the semester. By the end of the semester, students should achieve literacy level equivalent to 4th grade in Thai school. Prerequisite: Thai 1B (Upper Introductory Thai) or equivalent, by consent of instructor. At least medium fluency in spoken and written Thai. Ability to conduct small talk with sufficient fluency. Ability to read and write equivalent to  2nd grade level in Thai school.</div>
-        <div class="span10 offset1 contact-text"> </div>
-        <div class="span10 offset1 mentorship-text">Thai 100B - Intermediate Thai Language and Culture.</span> Intermediate Thai 100B is an upper intermediate level course, a continuation of Intermediate Thai 100A.  Students will learn to read longer and more abstract writing, advertisements from newspapers, articles from magazines and webpage. The class will cover expressions, figures of speech, higher level grammar, and hierarchical pronouns. Writing will move from descriptive to expository. To increase verbal skills and cultural education, students will watch karaoke, TV advertisements, and films. Students will also have regular intensive conversation practice and in-class presentation. The language of instruction will be in Thai approximately 50% to 70% of the time. By the end of the semester, the average students should achieve literacy level equivalent to 5th - 6th grade in Thai school. Prerequisite: Thai 100B (Lower Intermediate Thai) or equivalent, by consent of instructor. Ability to read descriptive articles, and write short composition equivalent to 3rd - 4th grade students in Thai school. Capable of carrying  informal conversation on a general subject with medium fluency.</div>
+        <div class="span10 offset1 contact-text"> Hobby : swimming, kayaking, ballroom dancing
+        Serious interest: human rights, religion, international politic
+        </div>
 
+
+        <div class="span10 offset1 contact-text"><i class="icon-dollar"></i>Click <a href="/thaiprofessor.html">here</a> to learn more about the <span class="bold">Thai Language Program</span>.</div>
         <div class="span10 offset1 contact-text"><i class="icon-dollar"></i>Donate <span class="bold">to the Thai Language Department</span> at the <a href="http://givetocal.berkeley.edu/fund/?f=FU1121000">Thai Language Fund</a>.</div>
     </div>
 </div>
