--- a/thaiprofessor.html
+++ b/thaiprofessor.html
@@ -39,7 +39,7 @@
 </div>
 
 
-<div class="background-header-container"><div class="background-header">Thai Professor</div></div>
+<div class="background-header-container"><div class="background-header">Professor</div></div>
 
 
 <div class="container">
@@ -48,21 +48,17 @@
     </div>
     <div class="row">
         <div class="span10 offset1 mentorship-text">
-        Supatra Chowchuvech
-        M.A. Institute of Transpersonal Psychology (Counseling Psychology), 2009
-        M.A. University of Pennsylvania  (Cultural Anthropology), 1983
-        B. Arch Chulalongkorn University  (Architecture), 1976
-        Lecturer</div>
+        M.A. Institute of Transpersonal Psychology (Counseling Psychology), 2009. M.A. University of Pennsylvania  (Cultural Anthropology), 1983. B. Arch Chulalongkorn University  (Architecture), 1976. Lecturer</div>
         <div class="span10 offset1 contact-text"> </div>
         <div class="span10 offset1 mentorship-text"> 
-        Supatra Chowchuvech teaches Thai Language and Culture at the Department of South and Southeast Asian Studies since 2009. After retiring from practice as a licensed architect in the San Francisco Bay Area, she has taught Thai Language and Culture at the Southeast Asian Summer Studies Institute (SEASSI), University of Wisconsin, and at the Buddhanusorn Thai temple in Fremont. Under the pen-name  Vitida Vasant , she co-authored a bi-lingual cross-cultural self-help relationship book , "Thailand Fever",  which has been translated into two other European languages, Ms. Chowchuvech is particularly interested in the issue of cross-cultural dynamic. She regularly conducts workshops and counseling to Thai and other Asian immigrants on navigating cultural differences on child rearing and spousal conflict. She is also an interpreter for immigration court.</div>
+        Supatra Chowchuvech teaches Thai Language and Culture at the Department of South and Southeast Asian Studies since 2009. After retiring from practice as a licensed architect in the San Francisco Bay Area, she has taught Thai Language and Culture at the Southeast Asian Summer Studies Institute (SEASSI), University of Wisconsin, and at the Buddhanusorn Thai temple in Fremont. Under the pen-name Vitida Vasant, she co-authored a bi-lingual cross-cultural self-help relationship book, "Thailand Fever", which has been translated into two other European languages, Ms. Chowchuvech is particularly interested in the issue of cross-cultural dynamic. She regularly conducts workshops and counseling to Thai and other Asian immigrants on navigating cultural differences on child rearing and spousal conflict. She is also an interpreter for immigration court.</div>
         <div class="span10 offset1 contact-text"> </div>
-        <div class="span10 offset1 contact-text"> Hobby : swimming, kayaking, ballroom dancing
-        Serious interest: human rights, religion, international politic
-        </div>
+        <div class="span10 offset1 contact-text"> Hobby : swimming, kayaking, ballroom dancing</div>
+        <div class="span10 offset1 contact-text"> </div>
+        <div class="span10 offset1 contact-text"> Serious interest: human rights, religion, international politics </div>
 
 
-        <div class="span10 offset1 contact-text"><i class="icon-dollar"></i>Click <a href="/thaiprofessor.html">here</a> to learn more about the <span class="bold">Thai Language Program</span>.</div>
+        <div class="span10 offset1 contact-text"><i class="icon-dollar"></i>Click <a href="/thaiprofessor.html">here</a> to learn more about the <span class="bold">Thai Language Professor</span>.</div>
         <div class="span10 offset1 contact-text"><i class="icon-dollar"></i>Donate <span class="bold">to the Thai Language Department</span> at the <a href="http://givetocal.berkeley.edu/fund/?f=FU1121000">Thai Language Fund</a>.</div>
     </div>
 </div>
