--- a/thaiprofessor.html
+++ b/thaiprofessor.html
@@ -50,6 +50,7 @@
         <div class="span10 offset1 mentorship-text">
         M.A. Institute of Transpersonal Psychology (Counseling Psychology), 2009. M.A. University of Pennsylvania  (Cultural Anthropology), 1983. B. Arch Chulalongkorn University  (Architecture), 1976. Lecturer</div>
         <BR>&nbsp;<BR>
+        <BR>&nbsp;<BR>
         <div class="span10 offset1 mentorship-text"> 
         Supatra Chowchuvech teaches Thai Language and Culture at the Department of South and Southeast Asian Studies since 2009. After retiring from practice as a licensed architect in the San Francisco Bay Area, she has taught Thai Language and Culture at the Southeast Asian Summer Studies Institute (SEASSI), University of Wisconsin, and at the Buddhanusorn Thai temple in Fremont. Under the pen-name Vitida Vasant, she co-authored a bi-lingual cross-cultural self-help relationship book, "Thailand Fever", which has been translated into two other European languages, Ms. Chowchuvech is particularly interested in the issue of cross-cultural dynamic. She regularly conducts workshops and counseling to Thai and other Asian immigrants on navigating cultural differences on child rearing and spousal conflict. She is also an interpreter for immigration court.</div>
         <BR>&nbsp;<BR>
