--- a/thaiprofessor.html
+++ b/thaiprofessor.html
@@ -58,9 +58,7 @@
         <BR>&nbsp;<BR>
         <div class="span10 offset1 contact-text"> Serious interest: human rights, religion, international politics </div>
 
-
-        <div class="span10 offset1 contact-text"><i class="icon-dollar"></i>Click <a href="/thaiprofessor.html">here</a> to learn more about the <span class="bold">Thai Language Professor</span>.</div>
-        <div class="span10 offset1 contact-text"><i class="icon-dollar"></i>Donate <span class="bold">to the Thai Language Department</span> at the <a href="http://givetocal.berkeley.edu/fund/?f=FU1121000">Thai Language Fund</a>.</div>
+        <div>Go <a href="/thaiclasses.html">back</a></div>
     </div>
 </div>
 </div>
