--- a/thaiprofessor.html
+++ b/thaiprofessor.html
@@ -58,7 +58,7 @@
         <BR>&nbsp;<BR>
         <div class="span10 offset1 contact-text"> Serious interest: human rights, religion, international politics </div>
 
-        <div class ="span10 offset1 contact-text">Go <a href="/thaiclasses.html">back</a></div>
+        <div class ="span10 offset1 contact-text">Go <a href="/thaiclasses.html">back</a> to <span class="bold"> Thai Classes</span>.</div>
     </div>
 </div>
 </div>
