--- a/volunteering.html
+++ b/volunteering.html
@@ -50,11 +50,13 @@
         <div class="span10 offset1 mentorship-text">
         The Thai Language Partners program (โครงการสนทนาภาษาไทย) is a collaboration between Thai language class at UCB and Berkeley Thai Students Association. It is an initiative that seeks to build a sense of community between Thai students from Thailand and Thai-Americans and other Americans who are interested in Thailand. The program gave them a unique opportunity to practice Thai conversation, connect with Thai students, learn about Thai culture, and join activities such as Loy Kratong, Song-gran, Thai nights etc. (In the past, some have even joined the ThaiSA's  board!). In exchange, you may extend the time in order to practice English or ask them to help brush up your term paper. The program has been a smashing hit for participants in the past  years. Now with the starting of the new semester, we are recruiting volunteers again. </div>
         <div class="span10 offset1 mentorship-text">
+        <BR>&nbsp;<BR>
         <ul>
         <li>A</li>
         <li>B</li>
         <li>C</li>
         </ul>
+        <BR>&nbsp;<BR>
         </div>
         
         
