--- a/volunteering.html
+++ b/volunteering.html
@@ -52,9 +52,15 @@
         <div class="span10 offset1 mentorship-text">
         <BR>&nbsp;<BR>
         <ul>
-        <li>A</li>
-        <li>B</li>
-        <li>C</li>
+        <li><span class="bold">Number of volunteers:</span> 5 Thais to pair up with 5 third-semester students (Beginning Intermediate Thai 100A) and 8 Thais to pair up with 8 pairs of first-semester students (Introductory Thai 1A).</li>
+        <li><span class="bold">Frequency:</span> Every other week. Total 5 times this semester.</li>
+        <li><span class="bold">Length of session:</span> 20 minutes for Intemediate students. 10 or more minutes for Introductory students.</li>
+        <li><span class="bold">Place:</span> Anywhere convenient for you. Avoid loud places.</li>
+        <li><span class="bold">Day:</span> Any day and time to be arranged between you and your partners, as long as it occurs in the assigned week.</li>
+        <li><span class="bold">Task:</span> Talking! (The conversation may be guided by the lesson and vocabulary learned in class). Answer questions on lessons.</li>
+        <li><span class="bold">Qualifications:</span> (1) Enthusiasm for coaching language and sharing culture. (2) Empathy for people who have just learned Thai for 5 weeks or for 7 months. (3) Patience to speak slowly, and sometimes repetitively. (4) Ability to use simple words and to initiate conversation. (5) Willingness to resist the tendency to immediately defaulting to English when your partner do not understand you.</li>
+        <li><span class="bold">In Class Introduction:</span> Beginning Intermediate class (Friday, September 20, from 12 noon to 12:30 pm at Wheeler Hall) and Introductory class (Wednesday, September 25, from 3:30 pm to 4:00 pm at Wheeler Hall)</li>
+        <li><span class="bold">Application or questions:</span> <a href="mailto:schowchuvech@berkeley.edu">Email</a> Aajaan Supatra ASAP.</li>
         </ul>
         <BR>&nbsp;<BR>
         </div>
