--- a/about.html
+++ b/about.html
@@ -52,8 +52,8 @@
         </div>
 
         <div class="span6">
-            <div class="text-header history">Our Story</div>
-            <div class="text-content">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</div>
+            <div class="text-header history">Join our Mailing List!</div>
+            <div class="text-content">Join our mailing list for the latest updates on ThaiSA and our events. We invite both Thais and non-Thais at UC Berkeley to join our mailing list. If you would like to join our mailing list, please email the President with your name and preferred email address!</div>
         </div>
     </div>
 
