--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
 
         <div class="span6">
             <div class="text-header history">Join our Mailing List!</div>
-            <div class="text-content">Join our mailing list for the latest updates on ThaiSA and our events. We invite both Thais and non-Thais at UC Berkeley to join our mailing list. If you would like to join our mailing list, please email the President with your name and preferred email address!</div>
+            <div class="text-content">Join our mailing list for the latest updates on ThaiSA and our events. We invite both Thais and non-Thais at UC Berkeley to join our mailing list. If you would like to join our mailing list, please <a href="mailto:natchapol.p@berkeley.edu">Email</a> the President with your name and preferred email address!</div>
         </div>
     </div>
 
