--- a/events.html
+++ b/events.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>ThaiSA Events</title>
+    <title>Events</title>
     <meta charset="UTF-8">
     <!-- forces mobile viewport to be correct -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
