--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script type="text/javascript" src="js/jquery.flexslider-min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 
-    <title>ThaiSA Home</title>
+    <title>ThaiSA - Home</title>
 </head>
 <body>
 
