--- a/events.html
+++ b/events.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Events</title>
+    <title>ThaiSA - Events</title>
     <meta charset="UTF-8">
     <!-- forces mobile viewport to be correct -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -62,7 +62,7 @@
                     <div class="name">Thaisa Welcome Week Banquet</div>
                     <div class="time"><i class="icon-calendar-empty"></i>Tuesday, May 9th, 11-12PM</div>
                     <div class="location"><i class="icon-compass"></i>155 Dwinelle Hall, UC Berkeley</div>
-                    <div class="description">ThaThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank Blehnk Bleh</div>
+                    <div class="description">TBA</div>
                     <div class="link"><a href="facebook.com">rsvp</a><a href="facebook.com">event info</a></div>
                 </div> <!-- featured-text -->
 
@@ -71,7 +71,7 @@
                     <div class="name">Thaisa Welcome Week Banquet</div>
                     <div class="time"><i class="icon-calendar-empty"></i>Tuesday, May 9th, 11-12PM</div>
                     <div class="location"><i class="icon-compass"></i>155 Dwinelle Hall, UC Berkeley</div>
-                    <div class="description">Thank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank Bleh</div>
+                    <div class="description">TBA</div>
                     <div class="link"><a href="facebook.com">rsvp</a><a href="facebook.com">event info</a></div>
                 </div> <!-- eatured-text -->
             </div>
