--- a/thaiprofessor.html
+++ b/thaiprofessor.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Thai Language Professor</title>
+    <title>ThaiSA - Thai Language Professor</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- forces mobile viewport to be correct -->
