--- a/events.html
+++ b/events.html
@@ -59,18 +59,18 @@
 
                 <!-- Featured Event 1 -->
                 <div class="span6 featured-text">
-                    <div class="name">Thaisa Welcome Week Banquet</div>
-                    <div class="time"><i class="icon-calendar-empty"></i>Tuesday, May 9th, 11-12PM</div>
-                    <div class="location"><i class="icon-compass"></i>155 Dwinelle Hall, UC Berkeley</div>
+                    <div class="name">TBA</div>
+                    <div class="time"><i class="icon-calendar-empty"></i>TBA</div>
+                    <div class="location"><i class="icon-compass"></i>TBA</div>
                     <div class="description">TBA</div>
                     <div class="link"><a href="facebook.com">rsvp</a><a href="facebook.com">event info</a></div>
                 </div> <!-- featured-text -->
 
                 <!-- Featured Event 2 -->
                 <div class="span6 featured-text">
-                    <div class="name">Thaisa Welcome Week Banquet</div>
-                    <div class="time"><i class="icon-calendar-empty"></i>Tuesday, May 9th, 11-12PM</div>
-                    <div class="location"><i class="icon-compass"></i>155 Dwinelle Hall, UC Berkeley</div>
+                    <div class="name">TBA</div>
+                    <div class="time"><i class="icon-calendar-empty"></i>TBA</div>
+                    <div class="location"><i class="icon-compass"></i>TBA</div>
                     <div class="description">TBA</div>
                     <div class="link"><a href="facebook.com">rsvp</a><a href="facebook.com">event info</a></div>
                 </div> <!-- eatured-text -->
