--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@ onsubmit="submitted=true;"><ol style="padding-left: 0">
             </div>
         </div>
         <div class="row-fluid footer-bottom-container">
-            <div class="span12 footer-bottom">&copy; 2013 UC Berkeley Thai Student Association (ThaiSA)</div>
+            <div class="span12 footer-bottom">&copy; 2013 UC Berkeley Thai Student Association (ThaiSA)<img src="../flags/32/Thailand.png"></div>
         </div>
     </div>
 </div>
