--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
             </div>
         </div>
         <div class="row-fluid footer-bottom-container">
-            <div class="span12 footer-bottom">&copy; 2013 UC Berkeley Thai Student Association (ThaiSA)<img src="../flags/32/Thailand.png"></div>
+            <div class="span12 footer-bottom">&copy; 2013 UC Berkeley Thai Student Association (ThaiSA)</div>
         </div>
     </div>
 </div>
