--- a/officers.html
+++ b/officers.html
@@ -62,7 +62,7 @@
 <div class="container current-officers-content">
     <div class="row officers-row">
         <div class="span4 officer">
-            <div style="background-image: url('https://sphotos-a-sjc.xx.fbcdn.net/hphotos-prn2/1239542_10151867913655011_891429766_n.jpg');" class="officer-picture"></div>
+            <div style="background-image: url('https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-ash3/q71/993413_10151953942230011_250190193_n.jpg');" class="officer-picture"></div>
             <div class="officer-content">
                 <div class="text officer-name">Natchapol Praditpetchara</div>
                 <div class="text officer-position">President</div>
@@ -73,7 +73,7 @@
             </div>
         </div> <!-- officer -->
         <div class="span4 officer">
-            <div style="background-image: url('https://sphotos-b-sjc.xx.fbcdn.net/hphotos-prn1/66792_10151867906840011_703270142_n.jpg');" class="officer-picture"></div>
+            <div style="background-image: url('https://scontent-a-sjc.xx.fbcdn.net/hphotos-prn2/1374183_10151953942255011_1688219761_n.jpg');" class="officer-picture"></div>
             <div class="officer-content">
                 <div class="text officer-name">Nopphon Siranart</div>
                 <div class="text officer-position">Internal Vice President</div>
@@ -93,7 +93,7 @@
     </div> <!-- officers-row -->
     <div class="row officers-row">
         <div class="span4 officer">
-            <div style="background-image: url('https://sphotos-b-sjc.xx.fbcdn.net/hphotos-prn1/11148_10151867906835011_1454905090_n.jpg');" class="officer-picture"></div>
+            <div style="background-image: url('https://scontent-b-sjc.xx.fbcdn.net/hphotos-prn1/923001_10151953942260011_32190987_n.jpg');" class="officer-picture"></div>
             <div class="officer-content">
                 <div class="text officer-name">Natnicha Vanitchanant</div>
                 <div class="text officer-position">Secretary</div>
@@ -102,7 +102,7 @@
             </div>
         </div> <!-- officer -->
         <div class="span4 officer">
-            <div style="background-image: url('https://sphotos-b-sjc.xx.fbcdn.net/hphotos-prn2/1185527_10151867996980011_1672978165_n.jpg');" class="officer-picture"></div>
+            <div style="background-image: url('https://scontent-a-sjc.xx.fbcdn.net/hphotos-ash3/1391957_10151953942420011_684484413_n.jpg');" class="officer-picture"></div>
             <div class="officer-content">
                 <div class="text officer-name">Chanoknan Vorasucha</div>
                 <div class="text officer-position">Treasurer</div>
@@ -122,16 +122,16 @@
     </div> <!-- officers-row -->
     <div class="row officers-row">
         <div class="span4 officer">
-            <div style="background-image: url('https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-prn2/1186095_10151868001130011_732869568_n.jpg');" class="officer-picture"></div>
+            <div style="background-image: url('https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-prn1/1380538_10151953942435011_976076373_n.jpg');" class="officer-picture"></div>
             <div class="officer-content">
-                <div class="text officer-name">Rasarose Kitmungsa</div>
-                <div class="text officer-position">Marketing Director</div>
-                <div class="text officer-subtitle">Architecture 2015</div>
-                <div class="text officer-description">Was born and raised in Bangkok...is currently working toward being a fun and considerate designer/architect...is saving up for a month-long journey on the train from the top to the bottom of Japan...is hopefully quite amusing ๆ (ฮิฮิ)</div>
+                <div class="text officer-name">Lalitphat Metsutnan</div>
+                <div class="text officer-position">Publicity Coordinator</div>
+                <div class="text officer-subtitle">MCB 2017</div>
+                <div class="text officer-description">HI! My name is Vemmy  I was born in Bangkok, Thailand but grew up in Los Angeles, California (SoCal!) I am very excited to be at Cal and looking forward to making many memories here. I am very honored to be apart of ThaiSA and will do my very best to uphold my duties. I am an outgoing and friendly person so I am looking forward to a great year here and meeting everybody !</div>
             </div>
         </div> <!-- officer -->
         <div class="span4 officer">
-            <div style="background-image: url('https://sphotos-b-sjc.xx.fbcdn.net/hphotos-ash4/1005820_10151867990475011_833966605_n.jpg');" class="officer-picture"></div>
+            <div style="background-image: url('https://scontent-b-sjc.xx.fbcdn.net/hphotos-prn1/556662_10151953942360011_1422043679_n.jpg');" class="officer-picture"></div>
             <div class="officer-content">
                 <div class="text officer-name">Nichakarn Yordduangjun</div>
                 <div class="text officer-position">Activities Coordinator</div>
