--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
     <div class="news-container row">
         <div class="span5 offset1 news-message">
             <div class="text-content">
-                <span class="news-date">July 25th 2013</span>Tons of welcome week activities coming up for Thai students! Email thaisa.ucberkeley@gmail.com for more details.
+                <span class="news-date">October 24th 2013</span>ThaiSA will be joining other Asian cultural organizations in a multinational food sale organized by the East Asian Union (EAU) on Upper Sproul! Come and enjoy food from various Asian cuisines as well as taking in some stunning cultural and musical performances.
             </div>
         </div>
         <div class="span5 news-message">
             <div class="text-content">
-                <span class="news-date">July 25th 2013</span>This year, we are also looking to expand our joint events initiatives with other South East Asian (SEA) student organizations at UC Berkeley. Stay tuned!
+                <span class="news-date">October 31st 2013</span>Come spend Halloween with ThaiSA as we will be screening a Thai scary (And by that, we mean REALLY scary!) movie with English subtitles. Location and time TBA!
             </div>
         </div>
     </div>
